Added validation to register form

--- a/app/src/main/assets/api.config
+++ b/app/src/main/assets/api.config
@@ -1,5 +1,17 @@
 # host
-host = localhost:8080
+host = localhost:8080/api/
 
-# api endpoints
-api_test = /test
+# user api
+signUp=reg
+makeTrust=trust
+makeFriends=makeFriends
+updatePassword=update/password
+updateDetails=update/details
+
+# message api
+send=action/send
+deleteSend=action/delete/send
+deleteReceived=action/delete/received
+syncMailbox=sync/mailbox
+syncInbox=sync/inbox
+syncOutbox=sync/outbox
