--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,13 @@ dependencies {
     })
     provided 'org.projectlombok:lombok:1.16.18'
     provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.mindorks:placeholderview:0.7.0'
+    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
     testCompile 'junit:junit:4.12'
 }
