--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     testCompile 'junit:junit:4.12'
 }
