--- a/app/src/main/assets/api.config
+++ b/app/src/main/assets/api.config
@@ -1,6 +1,11 @@
-# host
+# localhost
 # host = localhost:8080/api/
-host=http://192.168.0.5:8080/api/
+
+# home host
+# host=http://192.168.0.5:8080/api/
+
+# other host
+host=http://192.168.1.104:8080/api/
 
 # user api
 signUp=reg
