fixed some issues on signing in, added user profile home screen

--- a/app/src/main/assets/api.config
+++ b/app/src/main/assets/api.config
@@ -4,8 +4,11 @@
 # home host
 # host=http://192.168.0.5:8080/api/
 
+# phone host
+# host=http://192.168.43.40:8080/api/
+
 # other host
-host=http://192.168.1.104:8080/api/
+host=http://172.16.64.17:8080/api/
 
 # user api
 signUp=reg
