--- a/app/src/main/assets/api.config
+++ b/app/src/main/assets/api.config
@@ -2,25 +2,25 @@
 # host = localhost:8080/api/
 
 # home host
-# host=http://192.168.0.5:8080/api/
+host=http://192.168.0.5:8080/api/
 
 # phone host
 # host=http://192.168.43.40:8080/api/
 
 # other host
-host=http://172.16.64.17:8080/api/
+# host=http://172.16.64.17:8080/api/
 
 # user api
-signUp=reg
-makeTrust=trust
-makeFriends=makeFriends
-updatePassword=update/password
-updateDetails=update/details
+#signUp=reg
+#makeTrust=trust
+#makeFriends=makeFriends
+#updatePassword=update/password
+#updateDetails=update/details
 
 # message api
-send=action/send
-deleteSend=action/delete/send
-deleteReceived=action/delete/received
-syncMailbox=sync/mailbox
-syncInbox=sync/inbox
-syncOutbox=sync/outbox
+#send=action/send
+#deleteSend=action/delete/send
+#deleteReceived=action/delete/received
+#syncMailbox=sync/mailbox
+#syncInbox=sync/inbox
+#syncOutbox=sync/outbox
