--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "it.szyszka.skillmarket"
         minSdkVersion 21
@@ -20,11 +20,10 @@ android {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 def AAVersion = '4.3.1'
 
 dependencies {
-    apt "org.androidannotations:androidannotations:$AAVersion"
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 }
 
@@ -34,14 +33,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     provided 'org.projectlombok:lombok:1.16.18'
+    annotationProcessor 'org.projectlombok:lombok:1.16.18'
     provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:support-v13:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.0.0-alpha1'
-    compile 'com.android.support:customtabs:26.0.0-alpha1'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:customtabs:26.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.mindorks:placeholderview:0.7.0'
-    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.7'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
