--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_app_logo"
+        android:icon="@mipmap/ic_app_logo_2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_app_logo"
+        android:roundIcon="@mipmap/ic_app_logo_2"
         android:supportsRtl="true"
-        tools:replace="android:icon"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
         <activity
             android:name=".modules.user.activities.SignInActivity_"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +25,15 @@
         </activity>
 
         <!-- User activities -->
-        <activity android:name=".modules.user.activities.SignUpActivity_" />
-        <activity android:name=".modules.user.activities.SignUpDetailsActivity_" />
-        <activity android:name=".modules.user.activities.UserProfileActivity_" />
+        <activity
+            android:name=".modules.user.activities.SignUpActivity_"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".modules.user.activities.SignUpDetailsActivity_"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".modules.user.activities.UserProfileActivity_"
+            android:screenOrientation="portrait" />
 
     </application>
 
