--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,16 @@
             </intent-filter>
         </activity>
 
+        <!-- Mail activity -->
+        <activity
+            android:name=".modules.mails.MailsActivity_"
+            android:screenOrientation="portrait">
+        </activity>
+        
+        <activity android:name=".modules.offers.OffersActivity_"
+            android:screenOrientation="portrait">
+        </activity>
+
         <!-- User activities -->
         <activity
             android:name=".modules.user.activities.SignUpActivity_"
